style.css
@import url('https://fonts.cdnfonts.com/css/ica-rubrik-black');
@import url('https://fonts.cdnfonts.com/css/poppins');
:root
{
    --primary-color: #25283b;
    --secondary-color: #ffffff;
    --background-color: #D2D2D2;
    --text-color: #000000;
    --gridline-color: #25283b22;
}

.darkmode
{
    --primary-color: #ffffff;
    --secondary-color: #25283b;
    --background-color: #25283b;
    --text-color: #ffffff;
    --gridline-color: #ffffff22;
}

.theme-switch{
    height: 50px;
    width: 50px;
    padding: 0;
    border-radius: 50%;
    background-color: var(--primary-color);
    display: flex;
    justify-content: center;
    align-items: center;
    bottom: 20px;
    right: 280px;
    position: fixed;
    z-index: 999;
}

.theme-switch svg{
    fill: var(--secondary-color);
}

.theme-switch svg:last-child{
    display: none;
}

.darkmode .theme-switch svg:first-child{
    display: none;
}

.darkmode .theme-switch svg:last-child{
    display: block;
}

@media (max-width: 1400px){
    .theme-switch{
        top: auto;
        left: auto;

        bottom: 20px;
        right: 20px;

        transform: none;
    }
}

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;

}
body{
    --topbar-height: 100px;
    min-height: 100vh;
    background-color: var(--background-color);
    background-image:
    repeating-linear-gradient(
        to right, transparent 0 100px,
        var(--gridline-color) 100px 101px
    ),
    repeating-linear-gradient(
        to bottom, transparent 0 100px,
        var(--gridline-color) 100px 101px
    );
}
        
body::before{

    position: absolute;
    width: min(1400px, 90vw);
    top: 10%;
    left: 50%;
    height: 90%;
    transform: translateX(-50%);
    content: '';
    background-image: url(images/bg.png);
    background-size: 100%;
    background-repeat: no-repeat;
    background-position: top center;
    pointer-events: none;
}

iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border: none;
}

/* Navigation Bar */

.topbar {
    position: fixed;
    top: 0;
    width: 100%;

    display: flex;
    align-items: center;
    justify-content: space-between;

    padding: 20px;
    max-width: 1400px;
    margin: 0 auto;

    left: 50%;
    transform: translateX(-50%);

    z-index: 1000;
    transition: transform 0.3s ease;
}

.logo {
    display: flex;
    align-items: center;
    text-decoration: none;
    color: var(--text-color);

    max-width: 200px;
    width: 100%;
}

.logo img {
    height: 40px;   /* adjust size as needed */
    width: auto;
    display: block;
}

.navbar {
    position: fixed;
    left: 50%;
    transform: translateX(-50%);

    padding: 15px 15px;
    background: #e5e5e5;
    border-radius: 20px;

    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
    transition: transform 0.2s;
}

.topbar--hide {
    transform: translate(-50%, -100%);
    box-shadow: none;
}

.navbar-container {
    display: flex;
    align-items: center;
    justify-content: center;
}

.navbar-logo{
    font-size: 1.5rem;
    font-weight: 600;
    color:var(--text-color);
    text-decoration: none;
    cursor: pointer;
}

.navbar-menu {
    display: flex;
    gap: 25px; /* spacing between items */
    list-style: none;
}

.navbar-container .navbar-menu li a {
    color: #333;
    text-decoration: none;
    font-size: 0.9rem;
    font-weight: 600;

    padding: 8px 16px;
    border-radius: 12px;

    transition: 0.3s ease;
}


.navbar-container .navbar-menu li a:hover,
.navbar-container .navbar-menu li a.active{
    background-color: rgba(0, 0, 0, 0.08);
}

.navbar-toggle{
    display: none;
    background: transparent;
    padding: 10px;
    border: none;
    cursor: pointer;
}

.bar{
    display: block;
    width: 25px;
    height: 3px;
    margin: 5px auto;
    background-color: var(--text-color);
    transition: all 0.3s ease-in-out;
}

@media (max-width: 880px) {
    .navbar {
        position: static;   /* remove centering */
        transform: none;
        background: none;
        box-shadow: none;
        padding: 0;
    }
    .navbar-container .navbar-menu{
        display: none;
        flex-direction: column; /* show hamburger on small screens */
        align-items: flex-start;
        grid-area: 1.7rem !important;
        position: absolute;
        height: 100vh;
        width: 250px;
        top: 0;
        right: 0;
        padding: 5rem 1.5rem;
        box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
        background-color: var(--background-color);
        z-index: 998;}

    .navbar-container .navbar-menu.active{
        display: flex;
    }
    
    .navbar-toggle{
        display: block;
        z-index: 999;
    }

    .navbar-toggle.active .bar:nth-child(2){
        opacity: 0;
    }

    .navbar-toggle.active .bar:nth-child(1){
        transform: translateY(8px) rotate(45deg);
    }

    .navbar-toggle.active .bar:nth-child(3){
        transform: translateY(-8px) rotate(-45deg);
    }
}

.banner{
    width: 100%;
    height: 100vh;
    text-align: center;
    overflow: hidden;
    position: relative;
}
.banner .slider{
    position: absolute;
    width: 150px;
    height: 75px;
    top: 10%;
    left: calc(50% - 100px);
    transform-style: preserve-3d;
    transform: perspective(1000px);
    animation: autoRun 20s linear infinite;
    z-index: 2;
}

@keyframes autoRun{
    from{
        transform: perspective(1000px) rotateX(-8deg) rotateY(0deg);
    }to{
        transform: perspective(1000px) rotateX(-8deg) rotateY(360deg);
    }
}

.banner .slider .item{
    position: absolute;
    inset: 0 0 0 0;
    transform: 
        rotateY(calc( (var(--position) - 1) * (360 / var(--quantity)) * 1deg))
        translateZ(550px);
}
.banner .slider .item img{
    width: 100%;
    height: 100%;
    object-fit: cover;
}
/* ... */

